Make GradlePropertiesUtils operate on strings and preserve trailing newlines
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>